--- a/RA2.tex
+++ b/RA2.tex
@@ -367,7 +367,7 @@ In order to validate the smearing procedure, generated QCD multijet events obtai
   \label{fig:qcd_rs_genjets}
 \end{figure}
 \\
-Overall the distributions derived from the smeared generator jets reproduce nicely the expectation from the simulation. Potential disagreements between the predicted and expected quantities are in this thesis denoted \textit{non-closure} of the method. In general, non-closure can occur due to the limited granularity of the response template binning and the averaged flavour composition of the response. In the end, the non-closure of the method is quantified for the whole R+S method including also the rebalancing step (see Sec.~\ref{subsec:RPlusS_app}) and is assigned as systematic uncertainty to the QCD background prediction (see Sec.~\ref{subsec:RA2_syst_unc}). 
+Overall the distributions derived from the smeared generator jets reproduce nicely the expectation from the simulation. Potential disagreements between the predicted and expected quantities are in this thesis denoted \textit{non-closure} of the method and the respective tests of the agreement \textit{closure tests}. In general, non-closure can occur due to the limited granularity of the response template binning and the averaged flavour composition of the response. In the end, the non-closure of the method is quantified for the whole R+S method including also the rebalancing step (see Sec.~\ref{subsec:RPlusS_app}) and is assigned as systematic uncertainty to the QCD background prediction (see Sec.~\ref{subsec:RA2_syst_unc}). 
 \end{description}
 \begin{figure}[!t]
   \centering
@@ -415,7 +415,7 @@ The correction factor is derived by using generator-truth information and hence 
 
 \subsection{Validation in Simulated Events}
 \label{subsec:validation_mc}
-The quality of the R+S method to predict background contributions from QCD multijet events is tested on Monte Carlo samples by several closure tests in different kinematic regions. Therefore, the data-based prediction is applied to Monte Carlo events and compared to the results from full simulation. The different closure tests as function of \MHT for various jet multiplicity bins for a low \HT ($= 500 - 1000$~GeV) and a high \HT ($\ge 1000$~GeV) selection are shown in Fig.~\ref{fig:qcd_rs_closure}. These closure tests are used to determine the remaining bias of the R+S method. 
+The quality of the R+S method to predict background contributions from QCD multijet events is tested on simulated samples by several closure tests in different kinematic regions. Therefore, the data-based prediction is applied to simulated events and compared to the results from full simulation, as explained in Sec.~\ref{subsec:RPlusS_app}. The different closure tests as function of \MHT for various jet multiplicity bins for a low \HT ($= 500 - 1000$~GeV) and a high \HT ($\ge 1000$~GeV) selection are shown in Fig.~\ref{fig:qcd_rs_closure} for simulated events obtained from \madgraph. In general, the prediction shows a good agreement with the expected QCD background contributions. Especially, for the high \HT regions, where QCD background is even more important than for lower \HT values, the agreement is reasonable. However, deviations between prediction and expectation occur, which have to be considered as remaining bias of the R+S method and treated as systematic uncertainty. Due to the limited statistics of the simulated sample, the bias uncertainty is not evaluated for each search region individually, but for the different jet multiplicity intervals and a low and a high \HT selection, corresponding to the kinematic regions defined in Fig.~\ref{fig:qcd_rs_closure}.
 \begin{figure}[!hp]
   \centering
   \begin{tabular}{cc}
@@ -430,11 +430,9 @@ The quality of the R+S method to predict background contributions from QCD multi
   \caption{Prediction of QCD background on a QCD multijet sample generated with \madgraph compared to the expectation from full simulation. The closure test is shown for various jet multiplicity bins and low (left) or high (right) \HT selections.}
   \label{fig:qcd_rs_closure}
 \end{figure}
-\\
-The first choice for the determination of remaining biases is to calculate the difference between prediction and expectation for the signal region (defined by \MHT $>$~200 GeV and the application of the $\Delta \phi$ cut) and take the observed difference as systematic uncertainty or even correct the prediction for a statistically significant non-closure of the method. The calculated differences with their statistical errors for the signal region are summarized in Tab.~\ref{tab:qcd_rs_closure_unc} (left column). 
 \begin{table}[!t] 
   \centering
-  \caption{Summary of non-closure uncertainties with their statistical error derived for the signal region (left) and two control regions with \MHT $= 100 - 200$~GeV (second column) and inverted $\Delta \phi$ criterium (third column). The fourth column is used as additional cross check region as described in the text. The numbers marked in bold letters are taken as the final non-closure uncertainties of the method.} 
+  \caption{Summary of non-closure uncertainties with their statistical uncertainties derived for the signal region (\textit{first column}) and two control regions with \MHT $= 100 - 200$~GeV (\textit{second column}) and inverted $\Delta \phi$ criterium (\textit{third column}). The fourth column is used as additional cross check region, as described in the text. The numbers marked in bold letters are considered as the final non-closure uncertainties of the method.} 
   \label{tab:qcd_rs_closure_unc}
    \makebox[\linewidth]{
     \begin{tabular}{cc|cccc}
@@ -456,7 +454,9 @@ The first choice for the determination of remaining biases is to calculate the d
     \end{tabular}}
 \end{table}
 \\
-There is one bin (for 3 -- 5 jets and \HT $= 500 - 1000$~GeV) where the signal region shows a statistically significant non-closure. In Fig.~\ref{fig:qcd_rs_closure_comp}, this particular distribution is shown for the \madgraph QCD sample (left) and the \pythia sample (right). In the region between \MHT $=$ 200 -- 350 GeV, the \madgraph sample shows an underprediction of $\approx 60\%$, while the \pythia sample tends to a statistically not significant overprediction. Therefore, it is hard to judge, if it is really a systematic effect or just a statistical fluctuation. In order to treat this conservatively, the result is not corrected for this effect, but the whole $60\%$ deviation in the madgraph sample is considered as systematic uncertainty. As QCD is not the dominant background contribution in this search bin, it will hardly affect the final result.
+The first choice for the determination of remaining biases is to calculate the difference between prediction and expectation for the signal region, defined by \MHT $>$~200 GeV and the application of the $\Delta \phi$ cut, and take the observed difference as systematic uncertainty or even correct the prediction for a statistically significant non-closure of the method. The calculated differences with their statistical uncertainties for the signal region are summarized in Tab.~\ref{tab:qcd_rs_closure_unc} (first column). 
+\\
+The table exhibits that there is one bin ($3 \leq \NJets \leq 5$ and $500 \leq \HT \leq 1000$\gev) where the signal region shows a statistically significant non-closure. In Fig.~\ref{fig:qcd_rs_closure_comp}, this particular distribution is shown for the \madgraph QCD sample (left) and the \pythia sample (right). In the region for \MHT $=$ 200--350\gev, the \madgraph sample shows an underprediction of $\approx 60\%$, while the \pythia sample tends to a statistically not significant overprediction. Thus, it is difficult to judge, if this is really a systematic effect or just a statistical fluctuation. In order to treat this observed difference conservatively, the predicted result is not corrected for this potential deviation, but the total 60\% deviation in the \madgraph sample is considered as systematic uncertainty. As QCD is not the dominant background contribution in this search bin, this rather large uncertainty will hardly affect the final result of the analysis.
 \begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
@@ -467,17 +467,28 @@ There is one bin (for 3 -- 5 jets and \HT $= 500 - 1000$~GeV) where the signal r
   \label{fig:qcd_rs_closure_comp}
 \end{figure}
 \\
-Since the number of events in the signal region is low for all bins except the one discussed above and thus the statistical uncertainties are large and do not lead to reasonable conclusions about the closure of the method, two sidebands of the signal region are studied. The prediction is compared to the full simulation either for control region 1 defined by \MHT $= 100 - 200$~GeV (second column in Tab.~\ref{tab:qcd_rs_closure_unc}) or for control region 2 defined by an inverted $\Delta \phi$ criterium (third column in Tab.~\ref{tab:qcd_rs_closure_unc}). 
+Since the number of events in the signal region with $\MHT \ge 200$\gev is low for all bins except the one discussed above and thus the statistical uncertainties are large and do not lead to reasonable conclusions about the closure of the method, two sidebands of the signal region are studied. The prediction is compared to the full simulation either for control region 1 defined by $ 100 \leq \MHT \leq 200$\gev (second column in Tab.~\ref{tab:qcd_rs_closure_unc}) or for control region 2 defined by an inverted $\Delta \phi$ criterion (third column in Tab.~\ref{tab:qcd_rs_closure_unc}). The evaluation of the remaining bias aiming at a conservative treatment, proceeds as follows: 
 \begin{itemize}
  \item If the differences in both control regions are statistically significant, the larger one is considered as systematic uncertainty. 
- \item If only one of the numbers is statistically significant, it has to be made sure that the assigned uncertainty by taking this number, e.g. coming from control region 1, is not too small, as a remaining bias might come from the application of the $\Delta \phi$ cut. Therefore, the chosen value is compared to the numbers in the corresponding cross check region bin (right column of Tab.~\ref{tab:qcd_rs_closure_unc}). If the values in the cross check region are smaller than the chosen uncertainty value from the control region, the number from the control region is considered as systematic error. Otherwise take largest number from cross check region.
- \item If none of the numbers is statistically significant, take the number with highest precision and proceed as above by comparing this value to the numbers in the cross check region. If the cross check region does not show larger values, take the number with highest precision, otherwise take largest number from cross check region.
+ \item If only one of the two numbers in the control regions is statistically significant, it has to be made sure that the assigned uncertainty by taking this number, \eg coming from control region 1, is not too small, as a remaining bias might come from the application of the $\Delta \phi$ cut. Thus, the value is compared to the value and its uncertainty in the corresponding cross check region bin (right column of Tab.~\ref{tab:qcd_rs_closure_unc}). If the value and its uncertainty in the cross check region are smaller than the chosen value from the control region, the number from the control region is considered as systematic error. Otherwise take largest number from cross check region (deviation or its uncertainty).
+ \item If none of the numbers in the control regions is statistically significant, take the number with higher precision and proceed as above by comparing this value to the numbers in the cross check region. If the cross check region does not show larger values, take the number with highest precision, otherwise take largest number from cross check region.
 \end{itemize}
-The uncertainty which is then finally chosen by the procedure described above as the non-closure uncertainty of the method, is printed in bold letters in Tab.~\ref{tab:qcd_rs_closure_unc}.\\
+The uncertainty which is finally considered by the procedure described above as the uncertainty quantifying the remaining bias of the R+S method, is printed in bold letters in Tab.~\ref{tab:qcd_rs_closure_unc}.
 
 \subsection{Application to Data Events}
 \label{subsec:validation_data_R+S}
-Furthermore, the method can also be validated directly in data. The QCD background prediction is performed on a QCD enriched data control sample collected by a set of prescaled and unprescaled PFHT triggers. Thus, it has to be made sure that the events are collected such that the background prediction is not biased and the highest possible statistical precision is obtained. This is done as follows: For each event, the trigger with the lowest prescale is determined. The event then gets a weight according to this prescale factor. Since only one prescaled PFHT trigger exists, this assignment is unambigious. This leads to a smooth \HT spectrum going down to the lowest trigger threshold. The prescale weighted seed \HT distribution is shown in Fig.~\ref{fig:qcd_rs_seedht}.
+\begin{figure}[!t]
+  \centering
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/turn_on_HT_TagEle27WP80_ProbePFHT650_chs_NJets3-5.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/turn_on_HT_TagEle27WP80_ProbePFNoPUHT650_chs_NJets3-5.pdf} \\
+  \end{tabular}
+\caption{Measured trigger efficiency for paths HLT\_PFHT650 (\textit{left}) and HLT\_PFNoPUHT650 (\textit{right}) as a function of \HT, shown for $3 \leq$ \NJets $\leq 5$.} 
+  \label{fig:trig_eff_650_3njets5}
+\end{figure}
+After the successful validation of the R+S method in simulated events and a quantification of a possible remaining bias, the procedure can finally be applied to data in order to estimate the QCD background contributions. \\
+The QCD background prediction is performed on a QCD multijet data control sample. This is collected by two triggers based on \HT calculated from PF jets. The nominal \HT thresholds of the two triggers are 350\gev and 650\gev, respectively. The trigger efficiency as a function of \HT for a nominal threshold of 350\gev has been evaluated already for the signal trigger in Sec.~\ref{subsec:RA2_samples_trigger} and was observed to be fully efficient for the baseline \HT cut. The trigger efficiencies for the respective trigger with $\HT = 650$\gev are shown in Fig.~\ref{fig:trig_eff_650_3njets5} for a jet multiplicity of 3--5. For this and the other two jet multiplicity selections, this trigger is fully efficient for a \HT selection of 800\gev. \\
+Since two different triggers are used, it has to made sure that each event of the multijet control sample is unambigously assigned to only one trigger to avoid double-counting of certain events and gain a smooth \HT spectrum to not bias the background prediction. Taking into account that the trigger with the lower \HT threshold has been prescaled during operation, this is done as follows: For each event, the trigger which fired and has the lowest prescale factor is determined. Then the event is weighted according to this prescale factor. Since only one prescaled and one unprescaled trigger is considered, this assignment is unambigious and leads to a smooth \HT spectrum which starts at the lowest trigger threshold. The prescale weighted seed \HT distribution is illustrated in Fig.~\ref{fig:qcd_rs_seedht}.
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
@@ -486,10 +497,11 @@ Furthermore, the method can also be validated directly in data. The QCD backgrou
   \caption{Seed \HT spectrum of full 2012 dataset used as input for the R+S method after correcting for trigger prescales.}
   \label{fig:qcd_rs_seedht}
 \end{figure}
-The usage of prescaled triggers is important in order to collect also events with \HT lower than 500 GeV which enter the signal region through a fluctuation to large response values. Nevertheless the events collected by the prescaled trigger come along with high event weights and spoil artifically the prediction when they enter the signal region since they lead to a substantially higher standard deviation. This problem is solved by smearing the events not only $N = 100$ times, but $N = \rm{prescale~factor} \times 100$ times and weighting them accordingly with one.\\
+The usage of prescaled triggers is important in order to collect also events with \HT values smaller than 500\gev which enter the signal region through a fluctuation to large response values. Nevertheless, the events collected by the prescaled trigger come along with high event weights and spoil artifically the prediction when they enter the signal region as they lead to a substantially higher standard deviation. This problem is solved by smearing the events obtained from the prescaled trigger not only $N = 100$ times, but $N = \rm{prescale~factor} \times 100$ times and weighting them accordingly with one.\\
 \\
-The performance of the R+S method can also be tested directly on data by comparing the prediction with selected data events in QCD enriched phase-space regions. This is done for \HT~$>~1000~\rm{GeV}$ and an inverted $\Delta \phi$ criterium in order to select a QCD enriched data sample as depicted in Fig.~\ref{fig:qcd_rs_dataclosure}. 
-\begin{figure}[!h]
+The successful application of the R+S method to data can be validated. This is done by comparing the prediction with the R+S method from data to selected events in a QCD enriched data control sample. This control sample is defined by at least three jets, $\HT > 1000$\gev, an inverted $\Delta \phi$ criterion and $100 \leq \MHT \leq 200$\gev. The resulting comparison between predicted and selected data events in that region is shown in Fig.~\ref{fig:qcd_rs_dataclosure} and exhibits reasonable agreement. Furthermore, no perfect agreement is expected since contaminations from other backgrounds are still present. \\
+Overall, the application of the R+S method to predict the QCD background contributions in data is expected to provide reliable results, since the validation tests in simulation as well as in data have a positive outcome. However, systematic uncertainties that have to be considered for the prediction of QCD background are discussed in the next section. 
+\begin{figure}[!t]
   \centering
   \begin{tabular}{cc}
                 \includegraphics[width=0.49\textwidth]{figures/HT_presel_HThigh_data_DR53X_chs_HThigh_invertedDeltaPhi_v1.pdf} &
@@ -498,34 +510,35 @@ The performance of the R+S method can also be tested directly on data by compari
   \caption{Prediction of QCD background on data compared to the expectation from data for a QCD enriched control region with \HT$>~1000~\rm{GeV}$, inverted $\Delta \phi$ cut, $\NJets \geq 3$ and $100 \leq \MHT \leq 200$\gev.}
   \label{fig:qcd_rs_dataclosure}
 \end{figure}
-Nevertheless no perfect agreement is expected since contaminations from other backgrounds do still contribute. Especially the deviations in the \MHT distribution increase with increasing values of \MHT as QCD is not dominant here, so that a comparison is only reasonable for the low \MHT region. 
-
 
 \subsection{Systematic Uncertainties}
 \label{subsec:RA2_syst_unc}
-Different uncertainties of the R+S method have been evaluated:
+Different systematic uncertainties of the R+S method have been evaluated:
 \begin{itemize}
-\item \textbf{Core of response functions:} The uncertainties on the factors of the Gaussian core resolution in Tab.~\ref{tab:jer_RPlusS_core} accounting for the differences in data and Monte Carlo are propagated to the prediction. This is done by shifting the scaling factors by $\pm 1\sigma$ up and down. The variations are between 10 to 30 $\%$ in the search bins where QCD leads to significant contributions.
-\item \textbf{Tail of response functions:} The uncertainties on the scaling factors of the non-Gaussian tails are also propagated to the prediction. The typical size of this uncertainty in QCD dominated regions is between 20 to 35 $\%$ which results in the main systematic uncertainty of the method. 
-\item \textbf{Non-closure:} The systematic uncertainty due to possible non-closure and remaining biases of the R+S method is evaluated as described in section \ref{subsec:RPlusS_app}. This uncertainty also covers uncertainties on the rebalance correction factor and the jet-\pt cut value chosen for the jets considered in the rebalancing. It is evaluated for each jet multiplicity bin which is separated into a low and a high \HT $(>~1000~\rm{GeV})$ region.
-\item \textbf{Pile-up:} In general, the R+S method is relatively safe against pile-up since very soft jets are neglected in the rebalancing procedure. Additionally, it is expected that pile-up is an issue especially for \textit{soft} jets which do not contribute significantly to the high \MHT search bins because they are mainly populated due to heavily mis-measured \textit{hard} jets. Therefore, a valid approach is to evaluate possible remaining pile-up effects in the low \MHT region for \MHT $> 100 \rm{~GeV}$. This approach also ensures that statistical limitations are reduced.\\
-The general approach is to study the difference in the behaviour of the prediction in data and Monte Carlo for different pile-up conditions. Hence, the sample is divided into three different bins of primary vertices $(0-10, 11-20, > 20)$. The prediction for each vertex bin (for \HT $>~500$~GeV) is calculated and normalized to the number of seed events contributing to that particular bin. It is assumed that pile-up effects are negligible in the lowest primary vertex bin. Therefore the distributions in data and Monte Carlo are normalized to each other such that they have the same yield in the first primary vertex bin. Then, the absolute difference between data and Monte Carlo prediction is calculated for the second and the third vertex bin, multiplied each with the seed events in data for that bin and summed up. The input distributions for this calculation are illustrated in Fig.~\ref{fig:qcd_rs_pileup}. The ratio of this pile-up dependent fraction of the prediction calculated as described above and the total prediction is taken as pile-up uncertainty. It is evaluated for each jet multiplicity bin separately. 
+\item \textbf{Core of response functions:} The uncertainties on the factors of the Gaussian core resolution accounting for the differences in data and Monte Carlo denoted in Tab.~\ref{tab:jer_RPlusS_core} are propagated to the prediction. This is done by shifting the scaling factors by $\pm 1\sigma$ up and down. 
+\item \textbf{Tail of response functions:} The uncertainties on the scaling factors of the non-Gaussian tails listed in Tab.~\ref{tab:jer_RPlusS_tails} are also propagated to the prediction by varying them within $\pm 1\sigma$ up and down. 
+\item \textbf{Non-closure:} The systematic uncertainty due to a potential non-closure and remaining biases of the R+S method is evaluated as described in Sec.~\ref{subsec:validation_mc}. This uncertainty also covers uncertainties on the rebalance correction factor and the jet-\pt cut value chosen for the jets considered in the rebalancing, such that no additional uncertainties are considered for those. The bias uncertainty is evaluated for each jet multiplicity bin separated into a low $ 500 \leq \HT \leq 1000$\gev and a high $\HT > 1000$\gev region.
+\item \textbf{Pileup:} In general, the R+S method is taking care of influences from pileup by applying L1 corrections to the jet momenta, making use of charged-hadron subtraction and neglecting soft jets in the rebalancing procedure. Furthermore, pileup which is an issue especially for soft jets does in general not contribute significantly to the high \MHT search bins, as these are mainly populated due to heavily mismeasured hard jets. Thus, a valid approach to evaluate possible residual pileup effects is to use a low \MHT control region with \MHT $> 100 \rm{~GeV}$. This approach also ensures that statistical limitations are reduced.\\
+The general approach is to study the difference in the behaviour of the prediction in data and simulation (taken from \madgraph) for different pileup conditions. Hence, the sample is divided into three different bins of primary vertices $N_\mathrm{Vtx} = [0$--$10]$, $N_\mathrm{Vtx} = [11$--$20]$ and $N_\mathrm{Vtx} > 20$. The QCD prediction for each vertex bin is calculated for \HT $>500$\gev and $\Delta \phi$ cut applied, and normalized to the number of seed events contributing to that particular vertex bin. It is assumed that pileup effects are negligible in the lowest primary vertex bin. Thus, the predictions corrected for the number of seed events in data and simulation are normalized to each other, such that they have the same yield in the first primary vertex bin. This distribution is illustrated for jet multiplicity 3--5 jets in Fig.~\ref{fig:qcd_rs_pileup}. 
 \end{itemize}
-%\begin{figure}[!h]
-%  \centering
-%  \begin{tabular}{cc}
-%                \includegraphics[width=0.49\textwidth]{figures/PUUncertainty_NJet3_5.pdf} &
-%                \includegraphics[width=0.49\textwidth]{figures/PUUncertainty_NJet6_7.pdf} \\
-%                \multicolumn{2}{c}{\includegraphics[width=0.49\textwidth]{figures/PUUncertainty_NJet8.pdf}}
-%  \end{tabular}
-%  \caption{Prediction of QCD background in data and Monte Carlo as a function of primary vertices (NVtx) normalized to the number of contributing seed events used for the determination of the pile-up uncertainty as described in Sec.~\ref{subsec:RA2_syst_unc}.}
-%  \label{fig:qcd_rs_pileup}
-%\end{figure}
+\begin{figure}[!h]
+  \centering
+  \begin{tabular}{cc}
+                \includegraphics[width=0.49\textwidth]{figures/PUUncertainty_NJet3_5.pdf}% &
+  %              \includegraphics[width=0.49\textwidth]{figures/PUUncertainty_NJet6_7.pdf} \\
+  %              \multicolumn{2}{c}{\includegraphics[width=0.49\textwidth]{figures/PUUncertainty_NJet8.pdf}}
+  \end{tabular}
+  \caption{Prediction of QCD background in data and Monte Carlo as a function of primary vertices ($N_\mathrm{Vtx}$) normalized to the number of contributing seed events used for the determination of the pile-up uncertainty as described in Sec.~\ref{subsec:RA2_syst_unc}.}
+  \label{fig:qcd_rs_pileup}
+\end{figure}
+Then, the absolute difference between data and Monte Carlo prediction is calculated for the second and the third vertex bin, multiplied each with the seed events in data for that vertex bin and summed up. %The input distributions for this calculation are illustrated in Fig.~\ref{fig:qcd_rs_pileup}. 
+The ratio of this pileup dependent fraction of the prediction calculated and the nominal QCD prediction is considered as pileup uncertainty. It is evaluated for each jet multiplicity interval separately. 
 
 \subsection{QCD Background Prediction}
 \label{subsec:RA2_qcd_pred}
-The final prediction for QCD background contributions derived with the R+S method is summarized in Tab.~\ref{tab:QCDPred} for jet multiplicity bins 3--5, 6--7 and $\ge 8$. The quoted total systematic uncertainty is obtained by adding the single contributions in quadrature. \\
-Some search bins show very large uncertainties of 100 $\%$ or sometimes even larger for the core and tail scaling uncertainties. This occurs only in bins where QCD is almost negligible and is caused by the fact that the statistical variations are so large that they also dominate the evaluation of systematic effects. As a conservative estimate the largest observed variation is taken as systematic uncertainty for core and tail scaling. 
+The final prediction for QCD background contributions derived with the R+S method from a multijet control sample in data is summarized in Tab.~\ref{tab:QCDPred} for jet multiplicity bins 3--5, 6--7 and $\ge 8$. The quoted total systematic uncertainty is obtained by adding the single contributions in quadrature. \\
+Some search bins show very large statistical uncertainties of $\geq 100 \%$ which then also affects the evaluation of systematic effects, \eg the core and tail scaling uncertainties. However, since this happens only in bins where QCD background is almost negligible, it does not impact the final result of the analysis significantly. For the affected systematic variations, the largest observed variation is considered as systematic uncertainty as a conservative estimate. Search bins that are affected by that are mainly the high \MHT and the highest jet multiplicity search bins. \\
+However, search regions with non-negligible contributions from QCD background, like high \HT ($\ge 1000$\gev) and low \MHT bins, in general show quite moderate total uncertainties around only 50\% which is a remarkable result for a prediction of a background that is that difficult to model, as discussed in the beginning of this section. The main contributions to the systematic uncertainty arise from the propagated uncertainties of the core and tail scaling factors. The resulting variations in the prediction from the variation of the core scaling factors are typically between 10 to 30 $\%$ in the search bins with non-negligible QCD contributions while it is between 20 to 35 $\%$ from the tail scaling factors. This emphasizes the importance to precisely measure the resolution scaling factors, as described in Chap.~\ref{chap:Resolution} for the scaling factors of the response core. 
 \begin{table}[!hp]
   \centering
   \caption{Predicted event yields for the QCD background in the search regions defined by \HT, \MHT and \NJets shown together with statistical and systematic uncertainties. The uncertainties of the different systematic uncertainty sources are added in quadrature to obtain the total systematic uncertainties.}
